# AmbientAudioTool

./: .gitignore  README.md  ambient_audio_tool_gui.spec  pyproject.toml
assets/ui_audio/: README.md
bedrock/: README.md
bedrock/behavior_pack/: manifest.json
bedrock/behavior_pack/data/: README.md  runtime_file_mapping.example.json
bedrock/behavior_pack/scripts/: README.md  bedrock_api_binding_flow.md  runtime_bridge_design.md  runtime_bridge_mvp.js  runtime_bridge_stub.js  runtime_bundle_injection.example.js  runtime_state_shape.example.json  update_pass_mapping.md
bedrock/resource_pack/: manifest.json
bedrock/resource_pack/sounds/: README.md
docs/: ambient_audio_system_spec_v2.md  event_template_catalog.md
examples/: biome_music_ref.json  custom_event_example.json  low_health_alert.json  night_swamp_ref_chain.json  test_bad_predicate.json  test_broken_ref.json  test_cycle_ref.json  test_missing_asset.json  underwater_ambient_noise.json
examples/template_catalog/: README.md
examples/template_catalog/authoring/: biome_ambient_forest_birds.json  contextual_oneshot_enter_cave.json  (+5 more)
scripts/: build_exe.bat  build_exe.ps1  launch_gui.py
src/ambient_audio_tool/: __init__.py  __main__.py
tests/: test_bedrock_api_binding_contract.py  test_bedrock_runtime_mvp_contract.py  test_cli.py  test_event_template_catalog_data.py  test_export_formats.py  test_exporter.py  test_format_contracts.py  test_gui_workspace.py  test_legacy_importer.py  test_project_loader.py  test_resource_paths.py  test_runtime.py  test_ui_audio_manager.py  test_validation.py
(+49 files in other folders)
